<resources>
    <string name="app_name">Cyberia</string>
    <string name="name">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="back_to_registration">Back to registration</string>
    <string name="select_photo">Select photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="select_user">Select user</string>
    <string name="username">Username</string>
    <string name="user_image">User Image</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="this_is_also_a_message">This is a message that will be longer than expected, so that it will wrap around</string>
    <string name="latest_message">Latest message</string>
    <string name="shy">shy</string>
    <string name="splash">splash</string>
    <string name="bottom">bottom</string>
    <string name="cyberia">サイベリア</string>
</resources>
