<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".registerlogin.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/select_photo_button"
                android:layout_width="@dimen/image_select_size"
                android:layout_height="@dimen/image_select_size"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/rounded_image_select"
                android:text="@string/select_photo"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/select_photo_circular"
                android:layout_width="@dimen/image_select_size"
                android:layout_height="@dimen/image_select_size"
                app:civ_border_width="@dimen/border"
                app:civ_border_color="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/select_photo_button"
                app:layout_constraintEnd_toEndOf="@+id/select_photo_button"
                app:layout_constraintStart_toStartOf="@+id/select_photo_button"
                app:layout_constraintTop_toTopOf="@+id/select_photo_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_registration_field"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/heart"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:layout_constraintTop_toBottomOf="@+id/select_photo_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_registration"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_margin="@dimen/default_margin"
                    android:autofillHints=""
                    android:background="@android:color/white"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/small_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_registration_field"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/mail"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/username_registration_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_registration"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_margin="@dimen/default_margin"
                    android:autofillHints=""
                    android:background="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="@dimen/small_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_registration_field"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/finger"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email_registration_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_margin="@dimen/default_margin"
                    android:autofillHints=""
                    android:inputType="textPassword"
                    android:background="@android:color/white"
                    android:hint="@string/password"
                    android:padding="@dimen/small_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/shy"
                android:layout_width="@dimen/big_image"
                android:layout_height="@dimen/big_image"
                android:contentDescription="@string/shy"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_registration_field"
                app:srcCompat="@drawable/shy" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/rounded_bg"
                android:textColor="@color/white"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@id/have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@color/white"
                android:text="@string/have_account"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>