<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".registerlogin.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/face"
                android:layout_width="@dimen/bigger_image"
                android:layout_height="@dimen/bigger_image"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_login_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/face"
                app:layout_constraintBottom_toTopOf="@id/password_login_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_margin="@dimen/default_margin"
                    android:autofillHints=""
                    android:background="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="@dimen/small_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_login_field"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/finger"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_margin="@dimen/default_margin"
                    android:autofillHints=""
                    android:inputType="textPassword"
                    android:background="@android:color/white"
                    android:hint="@string/password"
                    android:padding="@dimen/small_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/rounded_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/back_to_registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/back_to_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/white"
                android:text="@string/back_to_registration"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>